test/expected/perr_unterminated_ansi_c.out
shit: 2:7: error: Unterminated string literal.
     2 |  echo $'abc
       |        ^~~~ here.
shit: 2:11: note:
     2 |  echo $'abc
       |            ^~ Expected ' here.
